objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ARC_Meeting_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ARC Meeting Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Link__c</fullName>
        <formula>HYPERLINK(($Label.AIA_SFDC_Org_Domain+'/'+Implementation__r.Account__r.Id), Implementation__r.Account__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agenda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Meeting_Decision__c</fullName>
        <label>Approval Meeting Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design</label>
        <referenceTo>AIA_Benefit_Design__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Meeting_Decision__c</fullName>
        <label>Bid Meeting Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDH_Benefit_Liaison_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CDH Benefit Liaison Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Comment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_State_of_Meeting_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City/State of Meeting Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_City__c</fullName>
        <description>Contact's City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_County__c</fullName>
        <description>Contact's County</description>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Contact name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <description>Contact phone number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <description>Contact's State</description>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Street__c</fullName>
        <description>Contacts Street Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Zip_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , "Email"), "Email", IF(CONTAINS( Subject , "Cold Call"), "Cold Call", IF(CONTAINS( Subject , "Call"), "Call", IF(CONTAINS( Subject , "Meeting"), "Meeting", IF(CONTAINS( Subject , "On Site Visit"), "Site Visit", IF(CONTAINS( Subject , "Quote"), "Send Letter/Quote", "Other"))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, "Key Event/Task Details Captured","Missing: "&amp;IF( LEN( Subject ) &lt; 3,"Quality Subject Description, ","")&amp;""&amp;IF(LEN(WhoId)=0,"Contact/Lead Reference, ","")&amp;""&amp;IF(LEN(WhatId)=0,"Account/Opportunity Reference",""))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Implementation_Link__c</fullName>
        <formula>HYPERLINK(($Label.AIA_SFDC_Org_Domain+'/'+Implementation__r.Id), Implementation__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Name__c</fullName>
        <formula>HYPERLINK("?id="&amp;Benefit_Design__r.Implementation__r.Id , "open")</formula>
        <label>Implementation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_of_Attendees__c</fullName>
        <description>DPS: A list of who attended which training program</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The names of the individuals who attended this event.  Type the attendees manually or use the Select Attendees button to select the names of those who attended.</inlineHelpText>
        <label>List of Attendees</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MIT_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MIT Reason</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <description>Allows users to select if it is 2-50 or 51+ market segment</description>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-50</fullName>
                </value>
                <value>
                    <fullName>51+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Location_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Location Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Status1__c</fullName>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Status__c</fullName>
        <description>DPS</description>
        <label>Meeting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduling</fullName>
                    <default>true</default>
                    <label>Scheduling</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meeting_Type__c</fullName>
        <label>Meeting Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bid Meeting</fullName>
                </value>
                <value>
                    <fullName>PRF Kickoff Meeting</fullName>
                </value>
                <value>
                    <fullName>ARC Approval Meeting</fullName>
                </value>
                <value>
                    <fullName>Account Kickoff Meeting</fullName>
                </value>
                <value>
                    <fullName>Group Structure Meeting</fullName>
                </value>
                <value>
                    <fullName>Implementation Pre-Kick-Off Meeting</fullName>
                </value>
                <value>
                    <fullName>Implementation Kick-Off Meeting</fullName>
                </value>
                <value>
                    <fullName>Implementation Debrief Meeting</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Review Meeting</fullName>
                </value>
                <value>
                    <fullName>Renewal Strategy Meeting</fullName>
                </value>
                <value>
                    <fullName>Pre-Kick-Off Meeting</fullName>
                </value>
                <value>
                    <fullName>Debrief Meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Misc_information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Misc. information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_Bid_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No Bid Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Meetings_left_to_be_Covered__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of meetings left to be covered</description>
        <label># of Meetings Left to be Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Open_Enrollment_Meetings__c</fullName>
        <description>Number of open enrollment meetings</description>
        <label># of Open Enrollment Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Out_of_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Enrollment "Out of Service Area"</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCMH_Decision__c</fullName>
        <label>PCMH Decision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointment to be Scheduled</fullName>
                    <color>#0B24BE</color>
                    <label>Appointment to be Scheduled</label>
                </value>
                <value>
                    <fullName>Appointment Scheduled</fullName>
                    <color>#0B6FCE</color>
                    <label>Appointment Scheduled</label>
                </value>
                <value>
                    <fullName>Pending Account Decision</fullName>
                    <color>#F3D904</color>
                    <label>Pending Account Decision</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <color>#006600</color>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <color>#CC0000</color>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Not Eligible</fullName>
                    <color>#999999</color>
                    <label>Not Eligible</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#000000</color>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCMH_Denial_Reason__c</fullName>
        <label>PCMH Denial Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PCMH_Decision__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Insufficient PCMH provider access.</fullName>
                    <color>#78C953</color>
                    <label>Insufficient PCMH provider access.</label>
                </value>
                <value>
                    <fullName>PCMH program not proven concept/wait and see.</fullName>
                    <color>#333399</color>
                    <label>PCMH program not proven concept/wait and see.</label>
                </value>
                <value>
                    <fullName>No savings guarantee</fullName>
                    <color>#66CCCC</color>
                    <label>No savings guarantee</label>
                </value>
                <value>
                    <fullName>Cost prohibitive</fullName>
                    <color>#FFCC66</color>
                    <label>Cost prohibitive</label>
                </value>
                <value>
                    <fullName>Did not see value</fullName>
                    <color>#A53711</color>
                    <label>Did not see value</label>
                </value>
                <value>
                    <fullName>Other.</fullName>
                    <color>#996633</color>
                    <label>Other.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCMH_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCMH Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCMH_Presentation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCMH Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signed_Up__c</fullName>
        <label>Signed Up</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spanish_Speaking_Interpreter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spanish Speaking Interpreter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Topic_Details__c</fullName>
        <description>DPS</description>
        <label>Topic Details</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management Team</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>PCMH</fullName>
                </value>
                <value>
                    <fullName>Persistency Bonuses</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Service (Account Management)</fullName>
                </value>
                <value>
                    <fullName>Service (Member)</fullName>
                </value>
                <value>
                    <fullName>BC Advantage CDH</fullName>
                </value>
                <value>
                    <fullName>Blue Preferred CDH</fullName>
                </value>
                <value>
                    <fullName>Blue Prefferred</fullName>
                </value>
                <value>
                    <fullName>CDH</fullName>
                </value>
                <value>
                    <fullName>COMP</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>DEP</fullName>
                </value>
                <value>
                    <fullName>DHMO Dental</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>EPO (Other)</fullName>
                </value>
                <value>
                    <fullName>EPO (PPO)</fullName>
                </value>
                <value>
                    <fullName>Healthy Blue</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue 2.0 CDH</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue Triple Option</fullName>
                </value>
                <value>
                    <fullName>HealthyBlue Triple Option CDH</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Life/ADD/STD</fullName>
                </value>
                <value>
                    <fullName>Medicare Advantage</fullName>
                </value>
                <value>
                    <fullName>MPOS</fullName>
                </value>
                <value>
                    <fullName>Network Lease</fullName>
                </value>
                <value>
                    <fullName>POE</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Strategy</fullName>
                </value>
                <value>
                    <fullName>Data Update</fullName>
                </value>
                <value>
                    <fullName>Emails</fullName>
                </value>
                <value>
                    <fullName>Finalist Meeting</fullName>
                </value>
                <value>
                    <fullName>Group Sales Review</fullName>
                </value>
                <value>
                    <fullName>Hub Recruitment</fullName>
                </value>
                <value>
                    <fullName>Issue Resolution Meeting (Contracts, Renewals)</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Meeting</fullName>
                </value>
                <value>
                    <fullName>Phone Conversations</fullName>
                </value>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Prospect Meeting</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Relationship Building Meeting</fullName>
                </value>
                <value>
                    <fullName>Renewal Meetings</fullName>
                </value>
                <value>
                    <fullName>Sales Support and Strategy</fullName>
                </value>
                <value>
                    <fullName>Service Issue</fullName>
                </value>
                <value>
                    <fullName>Shop</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Topics__c</fullName>
        <description>DPS</description>
        <label>Topics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Relationship Building</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Translation_Required__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Translation Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Online meeting media</description>
        <label>Webinar Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wellness_Serv__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Wellness Serv</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_of_Meeting_Location__c</fullName>
        <label>Zip Code of Meeting Location</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today's Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>